--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "osuparse"
 license = "GPL-3.0-or-later"
+readme = "README.md"
+repository = "https://github.com/eltrufas/osuparse"
+documentation = "https://docs.rs/osuparse"
 version = "0.1.1"
 authors = ["Rafael Castillo <rafael@trfs.me>"]
 description = "Crate for parsing osu! beatmaps."
